@@ -16,8 +16,7 @@ glade_DATA = 				\
 	prefs_dlg.xml			\
 	send_message_dlg.xml		\
 	spell_dlg.xml			\
-	lists_dlg.xml			\
-	tray_menu.xml
+	lists_dlg.xml
 
 icondir = $(datadir)/icons/hicolor/48x48/apps
 icon_DATA = twitux.png
