@@ -1,34 +1,0 @@
-<?xml version="1.0" standalone="no"?> <!--*- mode: xml -*-->
-<!DOCTYPE glade-interface SYSTEM "http://glade.gnome.org/glade-2.0.dtd">
-
-<glade-interface>
-  <widget class="GtkMenu" id="tray_menu">
-    <child>
-      <widget class="GtkCheckMenuItem" id="tray_show_app">
-        <property name="visible">True</property>
-        <property name="label" translatable="yes">_Show Twitux</property>
-        <property name="use_underline">True</property>
-      </widget>
-    </child>
-    <child>
-      <widget class="GtkSeparatorMenuItem" id="separator8">
-        <property name="visible">True</property>
-      </widget>
-    </child>
-    <child>
-      <widget class="GtkMenuItem" id="tray_new_message">
-        <property name="visible">True</property>
-        <property name="label" translatable="yes">_New Message</property>
-        <property name="use_underline">True</property>
-      </widget>
-    </child>
-    <child>
-      <widget class="GtkImageMenuItem" id="tray_quit">
-        <property name="visible">True</property>
-        <property name="label" translatable="yes">gtk-quit</property>
-        <property name="use_underline">True</property>
-        <property name="use_stock">True</property>
-      </widget>
-    </child>
-  </widget>
-</glade-interface>
