@@ -8,7 +8,6 @@
 [type: gettext/glade]data/prefs_dlg.xml
 [type: gettext/glade]data/send_message_dlg.xml
 [type: gettext/glade]data/spell_dlg.xml
-[type: gettext/glade]data/tray_menu.xml
 data/twitux.desktop.in.in
 data/twitux.schemas.in
 
